# mp4grep

./: .gitignore  Makefile  README  README.md  TODO  build.gradle  config.mk  configure.sh  defs.ml  hello_world.ml  install.sh  mediagrep.cc  mediagrep.h  mp4grep-convert  mp4grep-convert.sh  mp4grep.ml  mp4grep.opam  perg.cc  perg.h  runner.ml  settings.gradle  threading.cc  transcribe.cc  transcribe.h  vosk_bindings.c  vosk_test.c
.github/workflows/: releaseApproval.yml
include/: jsmn.h  meow_hash_x64_aesni.h
src/main/java/: AVgrep.java  ArgumentParser.java  CommandLineArguments.java  Greppable.java  GreppableFile.java  Grepper.java  JCommanderArgs.java  MP4Grep.java  Main.java  SoundEngineAdapter.java  SpeechToText.java  Unix4JGreppable.java  VoskSoundEngineAdapter.java  VoskSpeechToText.java
src/main/java/Arguments/: GrepperArguments.java  PrintArguments.java  RawPrintArguments.java  SearchArguments.java  SpeechToTextArguments.java  TranscriptArguments.java
src/main/java/Globals/: GlobalArgs.java  GlobalColors.java  GlobalErrorCodes.java  GlobalLocations.java
src/main/java/Main/: AVgrep.java  ArgumentParser.java  Arguments.java  Controller.java  FileParser.java  Grepper.java  JCommanderArgs.java  MP4grep.java  PicoCliArgs.java  RawTranscriptController.java  SearchController.java
src/main/java/Output/: MultithreadedPrinter.java  (+1 more)
src/test/java/: GreppableTest.java  SpeechToTextOutputTest.java  VoskConverterTest.java
src/test/resources/: testMatchingTimestamps.txt
test/java/Transcribe/: VoskConverterTest.java
test/resources/: testMatching1.txt
(+60 files in other folders)
