opam-version: "2.0"
name: "mp4grep"
version: "0.1.2"
synopsis: "Command line tool for transcribing and searching the audio contents of files"
description: """
Command line tool for transcribing and searching the audio contents of files
"""
maintainer: "ooc oocgithub@gmail.com"
authors: "ooc oocgithub@gmail.com"
dev-repo: "git+https://github.com/o-oconnell/mp4grep"
depends: [ "ocaml" "parmap" ]
build: [
  [make]
]
install: [make]
